--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -1,1 +1,36 @@
-<section class="vegetables"></section>
+<section class="vegetables container" id="vegetables">
+  <h2 class="vegetables-title">
+    organic <span class="vegetables-title-accent">vegetables</span>
+  </h2>
+  <p class="vegetables-paragraph">
+    Our organic vegetables are hand-picked from local farms and delivered
+    straight to your doorstep, ensuring that you get the freshest and most
+    nutritious produce possible.
+  </p>
+  <ul class="vegetables-list">
+    <li class="vegetables-item">
+      <h3 class="vegetables-name">eggplant</h3>
+      <p class="vegetables-price">60 UAH / kg</p>
+    </li>
+    <li class="vegetables-item">
+      <h3 class="vegetables-name">leek</h3>
+      <p class="vegetables-price">50 UAH / kg</p>
+    </li>
+    <li class="vegetables-item">
+      <h3 class="vegetables-name">mushrooms</h3>
+      <p class="vegetables-price">40 UAH / kg</p>
+    </li>
+    <li class="vegetables-item">
+      <h3 class="vegetables-name">corn</h3>
+      <p class="vegetables-price">60 UAH / kg</p>
+    </li>
+    <li class="vegetables-item">
+      <h3 class="vegetables-name">sweet potatoes</h3>
+      <p class="vegetables-price">50 UAH / kg</p>
+    </li>
+    <li class="vegetables-item">
+      <h3 class="vegetables-name">carrot</h3>
+      <p class="vegetables-price">40 UAH / kg</p>
+    </li>
+  </ul>
+</section>
