--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,3 +1,69 @@
 .hero {
-  background-color: aquamarine;
+  background-color: #576F35;
+}
+
+.hero-container {
+  min-width: 320px;
+  background-color: #576F35;
+}
+
+@media screen and (min-width: 375px) {
+  .hero-container {
+    width: 375px;
+  }
+}
+
+h1 {
+  font-family: "Inter Tight SemiBold", sans-serif;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 100%;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
+  color: #FBFBFB;
+  margin: 0 auto;
+}
+
+p {
+  margin: 0 auto;
+}
+
+.hero-title {
+  max-width: 335px;
+  margin-bottom: 20px;
+}
+
+
+.hero-content {
+  font-family: "Inter Tight SemiBold", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 129%;
+  color: #FBFBFB;
+  padding: 0 20px 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-container {
+    width: 768px;
+  }
+
+  h1 {
+    font-size: 76px;
+  }
+
+  .hero-title {
+    max-width: 704px;
+    margin-bottom: 25px;
+  }
+
+  .hero-content {
+    font-size: 16px;
+    line-height: 125%;
+    padding: 0 101px 50px 32px;
+  }
+
+  img {
+    width: 768px;
+  }
 }
