--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,40 @@
 <section class="hero">
-  <p>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam unde adipisci
-    et asperiores accusamus, quos hic at nihil. Distinctio illo voluptas in
-    deleniti aliquam nostrum dicta mollitia est eveniet expedita.
-  </p>
+  <div class="container hero-container">
+    <h1 class="hero-title">organic vegetables to your diet today!</h1>
+    <p class="hero-content">
+      Our expertly curated vegetable baskets are made with the freshest, highest
+      quality vegetables available. Fresh Harvest Box has got you covered.
+      Fresh, high-quality vegetables in expertly curated vegetable baskets
+      delivered to you.
+    </p>
+    <picture>
+      <source
+        srcset="
+          ../img/hero/vegetables-desk.jpg   1x,
+          ../img/hero/vegetables-desk2x.jpg 2x
+        "
+        media="(min-width: 1280px)"
+      />
+      <source
+        srcset="
+          ../img/hero/vegetables-tab.jpg   1x,
+          ../img/hero/vegetables-tab2x.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ../img/hero/vegetables-mob.jpg   1x,
+          ../img/hero/vegetables-mob2x.jpg 2x
+        "
+        media="(min-width: 375px)"
+      />
+      <img
+        src="../img/hero/vegetables-mob.jpg"
+        alt="vegetables"
+        width="375"
+        height="370"
+      />
+    </picture>
+  </div>
 </section>
