--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -11,26 +11,92 @@
     <li class="vegetables-item">
       <h3 class="vegetables-name">eggplant</h3>
       <p class="vegetables-price">60 UAH / kg</p>
+      <img
+        class="vegetables-pic"
+        srcset="
+          ./img/vegetables/eggplant@1x.png 1x,
+          ./img/vegetables/eggplant@2x.png 2x
+        "
+        src="./img/vegetables/eggplant@1x.png"
+        alt="eggplant"
+        width="282"
+        height="243"
+      />
     </li>
     <li class="vegetables-item">
       <h3 class="vegetables-name">leek</h3>
       <p class="vegetables-price">50 UAH / kg</p>
+      <img
+        class="vegetables-pic"
+        srcset="
+          ./img/vegetables/leak@1x.png 1x,
+          ./img/vegetables/leak@2x.png 2x
+        "
+        src="./img/vegetables/leak@1x.png"
+        alt="leek"
+        width="282"
+        height="243"
+      />
     </li>
     <li class="vegetables-item">
       <h3 class="vegetables-name">mushrooms</h3>
       <p class="vegetables-price">40 UAH / kg</p>
+      <img
+        class="vegetables-pic"
+        srcset="
+          ./img/vegetables/mushrooms@1x.png 1x,
+          ./img/vegetables/mushrooms@2x.png 2x
+        "
+        src="./img/vegetables/mushrooms@1x.png"
+        alt="mushrooms"
+        width="282"
+        height="243"
+      />
     </li>
     <li class="vegetables-item">
       <h3 class="vegetables-name">corn</h3>
       <p class="vegetables-price">60 UAH / kg</p>
+      <img
+        class="vegetables-pic"
+        srcset="
+          ./img/vegetables/corn@1x.png 1x,
+          ./img/vegetables/corn@2x.png 2x
+        "
+        src="./img/vegetables/corn@1x.png"
+        alt="corn"
+        width="282"
+        height="243"
+      />
     </li>
     <li class="vegetables-item">
       <h3 class="vegetables-name">sweet potatoes</h3>
       <p class="vegetables-price">50 UAH / kg</p>
+      <img
+        class="vegetables-pic"
+        srcset="
+          ./img/vegetables/potato@1x.png 1x,
+          ./img/vegetables/potato@2x.png 2x
+        "
+        src="./img/vegetables/potato@1x.png"
+        alt="sweet potatoes"
+        width="282"
+        height="243"
+      />
     </li>
     <li class="vegetables-item">
       <h3 class="vegetables-name">carrot</h3>
       <p class="vegetables-price">40 UAH / kg</p>
+      <img
+        class="vegetables-pic"
+        srcset="
+          ./img/vegetables/carrot@1x.png 1x,
+          ./img/vegetables/carrot@2x.png 2x
+        "
+        src="./img/vegetables/carrot@1x.png"
+        alt="carrot"
+        width="282"
+        height="243"
+      />
     </li>
   </ul>
 </section>
