--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
   |============================
 */
 @import url('./reset.css');
+@import url('./common-styles.css');
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./how-it-works.css');
@@ -14,18 +15,18 @@
 @import url('./your-order.css');
 @import url('./footer.css');
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+/* :root { */
+/* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
+/* font-size: 16px; */
+/* line-height: 24px; */
+/* font-weight: 400; */
+/*  */
+/* color: #242424; */
+/* background-color: rgba(255, 255, 255, 0.87); */
+/*  */
+/* font-synthesis: none; */
+/* text-rendering: optimizeLegibility; */
+/* -webkit-font-smoothing: antialiased; */
+/* -moz-osx-font-smoothing: grayscale; */
+/* -webkit-text-size-adjust: 100%; */
+/* } */
