--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,10 @@
-<header class="header"></header>
+<header class="header">
+  <div class="container">
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+      sapiente dignissimos, excepturi quaerat harum architecto nobis illo
+      aperiam. Deleniti nihil quasi quas itaque maxime iusto molestiae. Autem
+      iure deserunt doloremque!
+    </p>
+  </div>
+</header>
