--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,26 @@
-<footer class="footer"></footer>
+<section> 
+<footer class="footer">
+    <div class="footer-container">
+    <div class="footer-green-block"> 
+    <h1 class="footer-logo">Green.Harvest</h1>
+    <p> Whether you're looking for a healthy snack or a thoughtful gift, our fruit baskets are the perfect choice.</p>
+    <button type="button" class="footer-button">
+        <svg width=""  height="">
+        </svg>
+    </button>
+    <ul class="footer-menu">
+        <li> <a class="footer-menu-intem" href="">how it works </a></li>
+        <li> <a class="footer-menu-intem" href="">vegetables </a> </li>
+        <li> <a class="footer-menu-intem" href="">reviews </a></li>
+    </ul>
+    <address class="footer-address">
+        <ul class="footer-address-list">
+            <li> <a href="tel:+380684439426" class="foter-adress-link">+380 (68) 443-94-26</a></li>
+            <li> <a href="adress:1678 S. Pioneer Road Salt Lake City UT 84104" class="foter-adress-link">1678 S. Pioneer Road Salt Lake City UT 84104</a></li>
+        </ul>
+    </address>
+    </div>
+    </div>
+</footer>
+</section>
+
