add title and info

--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,1 +1,42 @@
-<section class="how-it-works"></section>
+<section class="cont-how-it-works">
+  <div class="how-it-works">
+    <img
+      class="photo-how-it-works"
+      src="../img/img-how-it/how-it-work-photo.jpg"
+      width="335"
+      height="450"
+      alt="how-it-works"
+    />
+  </div>
+  <div class="description-how-it">
+    <p class="tittle-how-it-works">
+      TO ORDER YOUR<br />
+      <span class="span-tittle-how-it">VEGETABLE</span> BASKET,<br />
+      SIMPLY FOLLOW THESE<br />
+      <span class="span-tittle-how-it">EASY STEPS</span>
+    </p>
+    <p class="paragraph-how-it-works">
+      Our baskets are assembled with care and delivered straight to your
+      doorstep, so you can enjoy the taste of fresh fruit without ever leaving
+      your home.
+    </p>
+    <ol class="list-how-it-works">
+      <li class="list-text-how-it">
+        <div class="number-list-redackt">1</div>
+        Just choose the vegetable you want to<br />
+        order by clicking on the checkboxes next<br />
+        to it.
+      </li>
+      <li class="list-text-how-it">
+        <div class="number-list-redackt-two">2</div>
+        Click on the basket and fill out the<br />
+        form.
+      </li>
+      <li class="list-text-how-it">
+        <div class="number-list-redackt-three">3</div>
+        Sit back and relax! Your fresh vegetables<br />
+        basket will be delivered.
+      </li>
+    </ol>
+  </div>
+</section>
