--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,1 +1,75 @@
-<section class="your-order"></section>
+<section class="your-order">
+  <div class="container">
+    <h1 class="your-order-title">
+      Fresh <span class="your-order-title-span">Harvest</span> Box has got you
+      covered
+    </h1>
+    <p class="your-order-text">
+      Our boxes are packed with delicious, nutritious vegetables, perfect for
+      anyone looking to eat healthier or support local farmers. Order your box
+      today and start enjoying the best that nature has to offer!
+    </p>
+    <div class="your-order-container">
+      <form class="your-order-form-cont" action="">
+        <h3 class="your-order-form-title">
+          Ordering <span class="your-order-form-span-red">from us</span> is
+          quick and easy! Fill out
+          <span class="your-order-form-span-green">the form</span> below and we
+          will contact you !
+        </h3>
+        <div class="form-container">
+          <input
+            class="your-order-input"
+            type="text"
+            name="username"
+            placeholder="Full Name"
+          />
+          <input
+            class="your-order-input"
+            type="email"
+            name="email"
+            placeholder="Email"
+          />
+          <textarea
+            class="your-order-textarea"
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Comment"
+          ></textarea>
+        </div>
+        <div class="btn-div"><button class="your-order-button" type="submit">Send</button></div>
+      </form>
+      <div class="your-order-img-cont">
+        <img
+          class="your-order-img"
+          src="../img/your-order/img-mob-1x.jpg"
+          alt=""
+        />
+        <p class="your-order-img-text">Follow us on our social networks:</p>
+        <ul class="your-order-list">
+          <li class="your-order-item">
+            <a
+              class="your-order-link"
+              href="https://www.instagram.com/goitclub/ "
+              >instagram /</a
+            >
+          </li>
+          <li class="your-order-item">
+            <a class="your-order-link" href="https://www.youtube.com/c/GoIT "
+              >facebook /</a
+            >
+          </li>
+          <li class="your-order-item">
+            <a
+              class="your-order-link"
+              href="https://www.facebook.com/goITclub/  "
+              >youtube</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
