--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,145 @@
+.container {
+  min-width: 320px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
 .header {
-  background-color: blue;
+  background-color: #576F35;
+  padding-top: 20px;
+  padding-bottom: 48px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-menu {
+  display: none;
+}
+
+.header-btn {
+  display: none;
+}
+
+@media screen and (min-width: 375px) {
+  .header-container {
+    width: 375px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 32px;
+    padding-bottom: 50px;
+  }
+
+  .header-container {
+    width: 728px;
+    min-height: 40px;
+  }
+
+  .logo {
+    margin-right: 510px;
+  }
+
+
+}
+
+@media screen and (min-width: 1280px) {
+  .open-menu-mob {
+    display: none;
+  }
+
+  .header,
+  .hero {
+    width: 100%;
+    height: 800px;
+    background: linear-gradient(to right, #576F35, #576F35 50%, transparent 50%),
+      url('../img/hero-bg-desk.jpg') no-repeat right;
+    background-size: cover;
+    background-size: auto;
+
+  }
+
+  .header-container {
+    width: 1240px;
+    min-height: 52px;
+  }
+
+  .header-menu {
+    display: flex;
+    gap: 8px;
+  }
+
+  .header-link-how>a {
+    border: 1px solid rgba(251, 251, 251, 0.4);
+    border-radius: 12px;
+    padding: 12px;
+    width: 114px;
+    height: 44px;
+    background-color: transparent;
+  }
+
+  .header-link-veg>a {
+    border: 1px solid rgba(251, 251, 251, 0.4);
+    border-radius: 12px;
+    padding: 12px;
+    width: 101px;
+    height: 44px;
+    background-color: transparent;
+  }
+
+  .header-link-rev>a {
+    border: 1px solid rgba(251, 251, 251, 0.4);
+    border-radius: 12px;
+    padding: 12px;
+    width: 81px;
+    height: 44px;
+    background-color: transparent;
+  }
+
+  .header-item {
+    font-family: "Inter Tight", italic, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 125%;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: #fbfbfb;
+  }
+
+  button {
+    border-radius: 30px;
+    width: 157px;
+    height: 52px;
+    background-color: #7a3145;
+    border: none;
+  }
+
+  .header-btn {
+    display: block;
+    font-family: 'Inter Tight', sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 111%;
+    letter-spacing: -0.01em;
+    text-transform: uppercase;
+    color: #fbfbfb;
+  }
+
 }
