--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,18 @@
   margin: 0 auto;
 }
 
+
+button {
+  border: none;
+  padding: 0;
+}
+
+.logo {
+  width: 194px;
+  height: 18px;
+  color: #fbfbfb;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
