--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,26 @@
-<header class="header"></header>
+  <div class="container header-container">
+    <a href="index.html" class="logo"
+      ><svg width="16" height="16">
+        <use href="../img/icons.svg#icon-logo"></use>
+      </svg>
+    </a>
+    <ul class="header-menu">
+      <li class="header-link-how">
+        <a class="header-item" href="">How It Works</a>
+      </li>
+      <li class="header-link-veg">
+        <a class="header-item" href="">Vegetables</a>
+      </li>
+      <li class="header-link-rev">
+        <a class="header-item" href="">Reviews</a>
+      </li>
+    </ul>
+    <button class="header-btn" type="button">Shop now</button>
+    <button class="open-menu-mob" type="button">
+      <svg width="32" height="32">
+        <use href="../img/icons.svg#icon-menu"></use>
+      </svg>
+    </button>
+  </div>
+</header>
+
