--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,1 @@
-<!-- <section class="hero"> -->
-<!-- <p> -->
-<!-- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam unde adipisci -->
-<!-- et asperiores accusamus, quos hic at nihil. Distinctio illo voluptas in -->
-<!-- deleniti aliquam nostrum dicta mollitia est eveniet expedita. -->
-<!-- </p> -->
-<!-- </section> -->
+<section class="hero"></section>
