--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,6 +1,1 @@
-<!-- <section class="how-it-works"></section> -->
-<!-- <p class="paragraph"> -->
-<!-- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero iste porro -->
-<!-- ipsam placeat eaque corrupti quis illum! Nemo praesentium, porro voluptate -->
-<!-- quaerat nihil doloremque excepturi minima. Beatae consequatur est sequi! -->
-<!-- </p> -->
+<section class="how-it-works"></section>
