--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -1,37 +1,38 @@
+img {
+  display: block;
+  min-width: 100%;
+  height: auto;
+}
+
+button {
+  cursor: pointer;
+}
+
 .your-order {
   background-color: #7a3145;
-  
 }
-.container {
-  max-width: 375px;
-  margin: 0 auto;
-  /* border: 1px solid red; */
-  padding: 80px 20px;
+.your-order-container {
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
-
-/* @media screen and (min-width: 375px) {
-  .container {
-    width: 375px;
-  }
-} */
 
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    /* padding: 100px 32px; */
-   padding-top: 100px;
-   padding-bottom: 100px;
-   padding-left: 32px;
+  .your-order-container {
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
 }
 
-@media screen and (min-width: 1158px) {
-  .container {
-    width: 1158px;
+@media screen and (min-width: 1280px) {
+  .your-order-container {
     padding: 100px;
   }
 }
 
+.your-order-title-box {
+  display: inline;
+  /* width: 640px; */
+}
 .your-order-title {
   color: #fbfbfb;
   font-family: 'Inter Tight';
@@ -48,7 +49,12 @@
     font-size: 64px;
     line-height: 1;
     margin-bottom: 25px;
-    /* max-width: 640px; */
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .your-order-title {
+    max-width: 751px;
   }
 }
 
@@ -64,35 +70,70 @@
   margin-bottom: 40px;
 }
 
-/* @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .your-order-text {
     font-size: 16px;
     line-height: 1.25;
+    font-style: normal;
     margin-bottom: 50px;
+    max-width: 640px;
   }
-} */
+}
 
-.your-order-container {
+@media screen and (min-width: 1280px) {
+  .your-order-text {
+    max-width: 742px;
+  }
+}
+
+.your-order-box {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
+
+@media screen and (min-width: 1280px) {
+  .your-order-box {
+    flex-direction: row;
+  }
+}
+
 .your-order-form-cont {
   background-color: #fbfbfb;
   border-radius: 30px;
   padding: 40px 20px;
-  /* width: 335px; */
 }
 
+@media screen and (min-width: 768px) {
+  .your-order-form-cont {
+    max-width: 628px;
+    margin: 0 auto;
+    padding: 50px 100px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .your-order-form-cont {
+      max-width: 529px;
+          padding: 50px;
+  }
+}
 .your-order-form-title {
   color: #141414;
   font-family: 'Inter Tight';
   font-size: 24px;
+  font-style: normal;
   font-weight: 600;
   line-height: 1.08;
   letter-spacing: 0.015em;
   text-transform: uppercase;
   margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .your-order-form-title {
+      margin-bottom: 50px;
+  }
 }
 
 .your-order-form-span-red {
@@ -110,10 +151,10 @@
   margin-bottom: 20px;
 }
 
-.btn-div {
-display: flex;
-justify-content: center;
-align-items: center;
+@media screen and (min-width: 1280px) {
+  .form-container {
+  margin-bottom: 25px;
+}
 }
 
 .your-order-input {
@@ -124,21 +165,42 @@ align-items: center;
   letter-spacing: 0.02em;
   border-radius: 30px;
   border: 1px solid rgba(20, 20, 20, 0.2);
-  /* width: 295px; */
   height: 46px;
   padding: 14px 16px;
 }
 
+@media screen and (min-width: 768px) {
+  .your-order-input {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.25;
+    height: 52px;
+  }
+}
+
 .your-order-textarea {
+  width: 100%;
+  height: 91px;
   color: #141414;
   font-family: 'Inter Tight';
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: 0.02em;
-  border-radius: 30px;
+  border-radius: 15px;
   border: 1px solid rgba(20, 20, 20, 0.2);
-  /* width: 295px; */
   padding: 14px 16px;
+  outline: transparent;
+  background-color: transparent;
+  resize: none;
+}
+
+@media screen and (min-width: 768px) {
+  .your-order-textarea {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.25;
+    height: 95px;
+  }
 }
 
 .your-order-button {
@@ -152,11 +214,15 @@ align-items: center;
   letter-spacing: 0.015em;
   text-transform: uppercase;
   border: none;
-  display: block;
-  width: 100%;
-  max-width: 295px;
+}
 
- 
+@media screen and (min-width: 768px) {
+  .your-order-button {
+    padding: 16px 191px;
+    font-size: 18px;
+    line-height: 1.11;
+    letter-spacing: 0.015em;
+  }
 }
 .your-order-img-cont {
   background-color: #fff;
@@ -164,6 +230,14 @@ align-items: center;
   background: #576f35;
   padding: 40px 20px;
   /* width: 335px; */
+}
+
+@media screen and (min-width: 768px) {
+  .your-order-img-cont {
+    max-width: 628px;
+    margin: 0 auto;
+    padding: 50px;
+  }
 }
 .your-order-img {
   border-radius: 15px;
@@ -175,25 +249,47 @@ align-items: center;
     url(<path-to-image>) lightgray -36.221px -42.887px / 167.158% 122.975%
       no-repeat;
   margin-bottom: 20px;
-
+  border: none;
 }
+
+@media screen and (min-width: 768px) {
+  .your-order-img {
+    margin-bottom: 50px;
+  }
+}
+
 .your-order-img-text {
   color: rgba(251, 251, 251, 0.5);
   font-family: 'Inter Tight';
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
-  line-height: 18px; /* 128.571% */
-  letter-spacing: -0.21px;
+  line-height: 1.29;
+  letter-spacing: 0.015em;
   margin-bottom: 14px;
 }
+
+@media screen and (min-width: 768px) {
+  .your-order-img-text {
+    font-size: 18px;
+    line-height: 1.11;
+    letter-spacing: 0.015em;
+    margin-bottom: 15px;
+  }
+}
+
 .your-order-list {
   display: flex;
   gap: 8px;
   flex-wrap: wrap;
 }
-/* .your-order-item {
-} */
+
+@media screen and (min-width: 768px) {
+  .your-order-list {
+    gap: 12px;
+  }
+}
+
 .your-order-link {
   color: #fbfbfb;
   font-family: 'Inter Tight';
@@ -201,4 +297,11 @@ align-items: center;
   font-weight: 600;
   line-height: 1.08;
   letter-spacing: 0.015em;
+}
+@media screen and (min-width: 768px) {
+  .your-order-link {
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: 0.015em;
+  }
 }
