--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,34 +7,34 @@
       Fresh, high-quality vegetables in expertly curated vegetable baskets
       delivered to you.
     </p>
-    <picture>
-      <source
-        srcset="
-          ../img/hero/vegetables-desk.jpg   1x,
-          ../img/hero/vegetables-desk2x.jpg 2x
-        "
-        media="(min-width: 1280px)"
-      />
-      <source
-        srcset="
-          ../img/hero/vegetables-tab.jpg   1x,
-          ../img/hero/vegetables-tab2x.jpg 2x
-        "
-        media="(min-width: 768px)"
-      />
-      <source
-        srcset="
-          ../img/hero/vegetables-mob.jpg   1x,
-          ../img/hero/vegetables-mob2x.jpg 2x
-        "
-        media="(min-width: 375px)"
-      />
-      <img
-        src="../img/hero/vegetables-mob.jpg"
-        alt="vegetables"
-        width="375"
-        height="370"
-      />
-    </picture>
   </div>
+  <picture class="hero-img">
+    <source
+      srcset="
+        ../img/hero/vegetables-desk.jpg   1x,
+        ../img/hero/vegetables-desk2x.jpg 2x
+      "
+      media="(min-width: 1280px)"
+    />
+    <source
+      srcset="
+        ../img/hero/vegetables-tab.jpg   1x,
+        ../img/hero/vegetables-tab2x.jpg 2x
+      "
+      media="(min-width: 768px)"
+    />
+    <source
+      srcset="
+        ../img/hero/vegetables-mob.jpg   1x,
+        ../img/hero/vegetables-mob2x.jpg 2x
+      "
+      media="(min-width: 375px)"
+    />
+    <img
+      src="../img/hero/vegetables-mob.jpg"
+      alt="vegetables"
+      width="375"
+      height="370"
+    />
+  </picture>
 </section>
