--- a/src/css/vegetables.css
+++ b/src/css/vegetables.css
@@ -1,19 +1,8 @@
-.container {
-    padding: 0 20px;
-    min-width: 320px;
-    margin: 0 auto;
-}
-
-body {
-    margin: 0;
-}
-
 .vegetables {
     background-color: #7A3145;
     padding-top: 80px;
     padding-bottom: 80px;
 }
-
 
 .vegetables-title {
     text-transform: uppercase;
@@ -34,7 +23,6 @@ body {
     font-size: 14px;
     line-height: 1.28;
     font-weight: 500;
-    letter-spacing: -0.02em;
     margin-bottom: 40px;
 }
 
@@ -80,7 +68,49 @@ body {
     .vegetables-title {
         font-size: 48px;
         }
-        .container {
-            max-width: 375px;
+}
+
+@media screen and (min-width: 768px) {
+    .vegetables {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+    .vegetables-title {
+        font-size: 64px;
+        line-height: 1;
+        margin-bottom: 50px;
+        max-width: 508px;
+    }
+    .vegetables-paragraph {
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0em;
+        margin-bottom: 50px;
+        max-width: 626px;
+    }
+    .vegetables-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        row-gap: 28px;
+        column-gap: 20px;
+    }
+    .vegetables-item {
+        padding: 32px 30px;
+        width: calc((100% - 20px) / 2);
+    }
+    .vegetables-name {
+        font-size: 32px;
+    }
+}
+@media screen and (min-width: 1280px) {
+    .container {
+        padding: 0 100px;
+    }
+    .vegetables-title {
+        margin-bottom: 25px;
         }
+    .vegetables-item {
+        padding: 32px;
+        width: calc((100% - 40px) / 3);
+    }
 }
