discount/html/css

--- a/src/partials/discount.html
+++ b/src/partials/discount.html
@@ -1,1 +1,3 @@
-<section class="discount"></section>
+<section class="contener discount">
+ <h1 class="discount-text"><span class="discount-text-green">Discount up to 40%!</span> Taste the vitamins and keep your health</h1>   
+</section>
