--- a/src/partials/discount.html
+++ b/src/partials/discount.html
@@ -1,3 +1,4 @@
 <section class="contener discount">
- <h1 class="discount-text"><span class="discount-text-green">Discount up to 40%!</span> Taste the vitamins and keep your health</h1>   
+     <h1 class="discount-text"><span class="discount-text-green">Discount up to 40%!</span> Taste the vitamins and keep
+            your health</h1>
 </section>
