--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,20 +1,129 @@
-
 .container {
   min-width: 320px;
   padding: 0 20px;
   margin: 0 auto;
 }
 
-
-button {
-  border: none;
-  padding: 0;
+.logo {
+  width: 168px;
+  height: 16px;
+  fill: #fbfbfb;
 }
 
-.logo {
-  width: 194px;
-  height: 18px;
+.header-logo-right {
+  margin: 2px 0;
+}
+
+.open-menu-btn {
+  padding: 0;
+  line-height: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  background-color: #7A3145;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.mob-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.close-menu-btn {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 240px;
+  border: none;
+  background-color: #7a3145;
+}
+
+.close-icon {
+  stroke: #fbfbfb;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-top {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.mob-menu-nav {
+  align-self: center;
+}
+
+.mob-menu-list {
+  margin-bottom: 50px;
+
+}
+
+.mob-menu-item {
+  border: 1px solid rgba(251, 251, 251, 0.4);
+  border-radius: 12px;
+  padding: 12px 0;
+  width: 115px;
+  height: 42px;
+  align-content: center;
+}
+
+.mob-menu-item:not(:last-child) {
+  margin-bottom: 8px;
+  text-align: center;
+}
+
+.mob-menu-link {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 129%;
+  letter-spacing: -0.02em;
+  text-align: center;
   color: #fbfbfb;
+}
+
+
+.header-button {
+  display: block;
+  min-width: 155px;
+  height: 50px;
+  border: 1px solid rgba(251, 251, 251, 0.2);
+  border-radius: 30px;
+  cursor: pointer;
+  margin-bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 129%;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
+  background-color: #7A3145;
+  color: #fbfbfb;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-button:hover,
+.header-button:focus {
+  background-color: #fbfbfb;
+  color: #7A3145;
+}
+
+.header-btn {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -70,6 +179,25 @@ button {
     margin-right: 510px;
   }
 
+  .mob-menu {
+    top: 50%;
+    left: 60%;
+    width: 351px;
+    height: 100%;
+    transform: translate(-12%, -50%);
+  }
+
+  .header-button {
+    background-color: #fbfbfb;
+    color: #7A3145;
+    min-width: 157px;
+    height: 52px;
+  }
+
+  .header-button:hover,
+  .header-button:focus {
+    color: rgba(122, 49, 69, 0.7);
+  }
 
 }
 
@@ -156,6 +284,3 @@ button {
   }
 
 }
-=======
-
-
