--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,1 +1,65 @@
-<section class="reviews"></section>
+    <section class="reviews-section container">
+      <div class="reviews-top">
+        <h2 class="reviews-title">
+          reviews from our <span class="reviews-title-part">customers</span>
+        </h2>
+        <p class="reviews-text">
+          Words of our customers: impressions and opinions about the quality of
+          our services and the freshness of our products.
+        </p>
+      </div>
+      <div class="reviews-container">
+        <div class="reviews reviews-phone">
+          <img
+            class="reviews-img"
+            srcset="../img/john-wax.jpg 1x, ../img/john-wax-2x.jpg 2x"
+            src="../img/john-wax.jpg"
+            alt="John Wax"
+          />
+          <div class="review-description">
+            <h3 class="review-description-title">John Wax</h3>
+            <p class="review-description-text">
+              These vegetables are my secret to delicious and healthy meals. The
+              quality is always at the highest level, the aroma and taste are
+              enchanting. I advise every fan of real products!
+            </p>
+          </div>
+        </div>
+        <div class="reviews reviews-tablet">
+          <img
+            class="reviews-img"
+            srcset="
+              ../img/victoria-romashenko.jpg    1x,
+              ../img/victoria-romashenko-2x.jpg 2x
+            "
+            src="../img/victoria-romashenko.jpg"
+            alt="Victoria Romashenko"
+          />
+          <div class="review-description">
+            <h3 class="review-description-title">Victoria Romashenko</h3>
+            <p class="review-description-text">
+              I love how fast and fresh the vegetables are delivered. Salads
+              always turn out so appetizing, and soups are real masterpieces.
+              The quality is impeccable!
+            </p>
+          </div>
+        </div>
+        <div class="reviews reviews-pc">
+          <img
+            class="reviews-img"
+            srcset="../img/ihor-trachuk.jpg 1x, ../img/ihor-trachuk-2x.jpg 2x"
+            src="../img/ihor-trachuk.jpg"
+            alt="Ihor Trachuk"
+          />
+          <div class="review-description">
+            <h3 class="review-description-title">Ihor Trachuk</h3>
+            <p class="review-description-text">
+              Recently tried my fresh tomatoes and peppers - amazing! The
+              authenticity of the taste, as if from the garden directly to my
+              table. It is now my main vegetable supplier.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+</html>
