--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,28 +1,30 @@
 <header class="header">
   <div class="container header-container">
-    <a href="index.html" class="logo"
-      ><svg class="header-logo-left" width="16" height="16">
-        <use href="../img/icons.svg#icon-logo"></use>
-      </svg>
-      <svg class="header-logo-right" width="148" height="12">
-        <use href="../img/icons.svg#icon-logotext"></use>
-      </svg>
-    </a>
+    <nav class="header-nav">
+      <a href="index.html" class="logo"
+        ><svg class="header-logo-left" width="16" height="16">
+          <use href="../img/icons.svg#icon-logo"></use>
+        </svg>
+        <svg class="header-logo-right" width="148" height="12">
+          <use href="../img/icons.svg#icon-logotext"></use>
+        </svg>
+      </a>
 
-    <ul class="header-menu">
-      <li class="header-link-how">
-        <a class="header-item" href="">How It Works</a>
-      </li>
-      <li class="header-link-veg">
-        <a class="header-item" href="">Vegetables</a>
-      </li>
-      <li class="header-link-rev">
-        <a class="header-item" href="">Reviews</a>
-      </li>
-    </ul>
+      <ul class="header-menu">
+        <li class="header-link-how">
+          <a class="header-item" href="">How It Works</a>
+        </li>
+        <li class="header-link-veg">
+          <a class="header-item" href="">Vegetables</a>
+        </li>
+        <li class="header-link-rev">
+          <a class="header-item" href="">Reviews</a>
+        </li>
+      </ul>
+    </nav>
     <button class="header-btn" type="button">Shop now</button>
     <button class="open-menu-btn" type="button">
-      <svg width="32" height="32">
+      <svg class="open-menu-icons" width="32" height="32">
         <use href="../img/icons.svg#icon-menu"></use>
       </svg>
     </button>
