--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,39 @@
   margin: 0 auto;
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+
+.header {
+  background-color: #576F35;
+  padding-top: 20px;
+  padding-bottom: 48px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-menu {
+  display: none;
+}
+
+.header-btn {
+  display: none;
+}
+
 .logo {
   width: 168px;
   height: 16px;
@@ -20,6 +53,11 @@
   background-color: transparent;
   cursor: pointer;
   border: none;
+}
+
+.open-menu-icons {
+  stroke: #fbfbfb;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mob-menu {
@@ -122,42 +160,6 @@
   color: #7A3145;
 }
 
-.header-btn {
-  display: none;
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-.header {
-  background-color: #576F35;
-  padding-top: 20px;
-  padding-bottom: 48px;
-}
-
-.header-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header-menu {
-  display: none;
-}
-
-.header-btn {
-  display: none;
-}
-
 @media screen and (min-width: 375px) {
   .header-container {
     width: 375px;
@@ -176,7 +178,8 @@
   }
 
   .logo {
-    margin-right: 510px;
+    width: 194px;
+    height: 18px;
   }
 
   .mob-menu {
@@ -199,19 +202,23 @@
     color: rgba(122, 49, 69, 0.7);
   }
 
+  .open-menu-icons {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-  .open-menu-mob {
+  .open-menu-btn {
     display: none;
   }
 
   .header,
   .hero {
     width: 100%;
-    height: 800px;
+    height: 186px;
     background: linear-gradient(to right, #576F35, #576F35 50%, transparent 50%),
-      url('../img/hero-bg-desk.jpg') no-repeat right;
+      url('../img/hero/vegetables-desk.jpg') no-repeat right;
     background-size: cover;
     background-size: auto;
 
@@ -220,6 +227,13 @@
   .header-container {
     width: 1240px;
     min-height: 52px;
+
+  }
+
+  .header-nav {
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
   }
 
   .header-menu {
