--- a/src/css/common-styles.css
+++ b/src/css/common-styles.css
@@ -36,6 +36,6 @@ body {
 @media screen and (min-width: 1280px) {
   .container {
     max-width: 1280px;
-    padding: 0 0;
+    padding: 100px 100px;
   }
 }
