--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,3 +1,130 @@
-.footer-logo{
-    color: brown;
+
+.footer{
+    background-color: #7a3145;
+    padding: 40px 0;
+
+}
+
+.footer .footer-container{
+    display: flex;
+    align-items: baseline;
+    flex-direction: column;
+    
+}
+
+.footer-container {
+    max-width: 320px;
+    padding: 40px 20px;
+    margin: 0 auto;
+}
+
+.footer-navigation{
+
+}
+.footer-button {
+    padding: 0;
+    border: none;
+    background: transparent;
+    line-height: 0;
+    cursor: pointer;
+    fill: white;
+}
+
+.footer-logo {
+    fill: white;
+}
+
+.footer-text{
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    color: #fbfbfb;
+    padding-top: 14px;
+    width: 294px;
+}
+
+
+
+
+.footer-menu{
+    font-family: "Inter Tight",
+    sans-serif;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 28px;
+    letter-spacing: -0.01em;
+    color: #fbfbfb;
+    padding-top: 40px;
+}
+
+.footer-menu-intem{
+   margin-bottom: 14px;
+   font-weight: 600;
+   font-size: 28px;
+   line-height: 1;
+   letter-spacing: -0.01em;
+   color: #fbfbfb;
+}
+
+.footer-address{
+    display: flex;
+    font-style: normal;
+}
+
+.footer-address-list{
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px; 
+    letter-spacing: -0.01em;
+    color: #fbfbfb;
+    margin-top: 40px;
+}
+
+.footer-adress-link{
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    line-height: 1.28571;
+    letter-spacing: -0.01em;
+    color: #fbfbfb;
+}
+
+.footer-end{ 
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px; 
+    letter-spacing: -0.01em;
+    color: rgba(251, 251, 251, 0.5);
+    margin-top: 80px;
+}
+
+.footer-the-end{
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: -0.01em;
+    color: rgba(251, 251, 251, 0.5);
+}
+
+@media screen and (min-width: 768px) {
+ 
+ .footer-container {
+    gap: 24px;
+    flex-wrap: wrap;
+    max-width: 564px;
+    display: flex;
+}
+}
+
+
+@media screen and (min-width: 1280px) {
+    
 }
